Checkpoint preceding shopping cart

--- a/test/fixtures/caskets.yml
+++ b/test/fixtures/caskets.yml
@@ -7,3 +7,34 @@ one:
 two:
   template: MyString
   text1: MyString
+# == Schema Information
+#
+# Table name: caskets
+#
+#  id                  :integer         not null, primary key
+#  template            :string(255)
+#  text1               :string(255)
+#  created_at          :datetime
+#  updated_at          :datetime
+#  image1_file_name    :string(255)
+#  image1_content_type :string(255)
+#  image1_file_size    :integer
+#  image1_updated_at   :datetime
+#  image2_file_name    :string(255)
+#  image2_content_type :string(255)
+#  image2_file_size    :integer
+#  image2_updated_at   :datetime
+#  image3_file_name    :string(255)
+#  image3_content_type :string(255)
+#  image3_file_size    :integer
+#  image3_updated_at   :datetime
+#  image4_file_name    :string(255)
+#  image4_content_type :string(255)
+#  image4_file_size    :integer
+#  image4_updated_at   :datetime
+#  image5_file_name    :string(255)
+#  image5_content_type :string(255)
+#  image5_file_size    :integer
+#  image5_updated_at   :datetime
+#
+
