--- a/test/fixtures/shopping_cart_items.yml
+++ b/test/fixtures/shopping_cart_items.yml
@@ -9,3 +9,18 @@ one: {}
 #
 two: {}
 #  column: value
+# == Schema Information
+#
+# Table name: shopping_cart_items
+#
+#  id         :integer         not null, primary key
+#  owner_id   :integer
+#  owner_type :string(255)
+#  quantity   :integer
+#  item_id    :integer
+#  item_type  :string(255)
+#  price      :float
+#  created_at :datetime
+#  updated_at :datetime
+#
+
