--- a/test/fixtures/shopping_carts.yml
+++ b/test/fixtures/shopping_carts.yml
@@ -9,3 +9,13 @@ one: {}
 #
 two: {}
 #  column: value
+# == Schema Information
+#
+# Table name: shopping_carts
+#
+#  id         :integer         not null, primary key
+#  created_at :datetime
+#  updated_at :datetime
+#  ordered    :boolean         default(FALSE)
+#
+
